CentOS/RAID1/iptables
# Generated by iptables-save v1.4.7 on Mon Dec 30 11:57:10 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [50:12788]
:LOCAL - [0:0]
:UWM - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -j LOCAL 
-A INPUT -j UWM 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A LOCAL -s 10.1.1.0/24 -p tcp -m tcp -j ACCEPT 
-A LOCAL -s 10.1.1.0/24 -p udp -m udp -j ACCEPT 
-A LOCAL -s 10.1.2.0/24 -p tcp -m tcp -j ACCEPT 
-A LOCAL -s 10.1.2.0/24 -p udp -m udp -j ACCEPT 
-A UWM -s 129.89.0.0/16 -p tcp -m tcp -j ACCEPT 
COMMIT
# Completed on Mon Dec 30 11:57:10 2013
